k8s/apps/wallabag/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag-postgres
  namespace: wallabag
  labels:
    app: wallabag-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallabag-postgres
  template:
    metadata:
      labels:
        app: wallabag-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: wallabag-postgres-data
