k8s/apps/wallabag/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag-postgres
  namespace: wallabag
spec:
  selector:
    app: wallabag-postgres
  ports:
    - name: db
      port: 5432
      targetPort: db
  type: ClusterIP
