k8s/apps/wallabag/wallabag-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wallabag
  namespace: wallabag
spec:
  selector:
    app: wallabag
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
