k8s/apps/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: wallabag.andrzejsidor.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wallabag
                port:
                  number: 80
